--- a/social.html
+++ b/social.html
@@ -19,15 +19,37 @@
                 <span class="material-symbols-outlined" id="menu__hamburguer" onclick="clickMenu()">
                     menu
                 </span>
-                <form class="formulario__principal" action="#">
-                    <textarea name="texttweet" id="textarea__formprincipal"
-                        placeholder="no que você está pensando?"></textarea>
-                    <button id="enviar" type="submit">enviar</button>
-                </form>
+                <div class="conteudo__icones__nav">
+                    <nav class="nav__icones">
+                        <ul>
 
-                <div class="foto__perfil">
-                    <img src="img/avatar-perfil.png" alt="">
+                            <li><a href="#" title="Leitor de Código de Barras">
+                                    <span id="sp" class="material-symbols-outlined">
+                                        barcode
+                                    </span>
+                                </a></li>
+                            <li><a href="#" title="Upload">
+                                    <span id="sp" class="material-symbols-outlined">
+                                        upgrade
+                                    </span>
+
+                                </a></li>
+                            <li><a href="#" title="Arquivos">
+                                    <span id="sp" class="material-symbols-outlined">
+                                        folder
+                                    </span>
+
+                                </a></li>
+
+
+
+                        </ul>
+
+                    </nav>
                 </div>
+
+
+
             </section>
             <nav class="nav" id="itens">
                 <div class="menu">
@@ -60,7 +82,7 @@
         </div>
         <main class="container__main">
             <div class="cards">
-                <a href="">
+                <a href="#">
                     <div class="card">
 
                         <span class="material-symbols-outlined">
@@ -68,12 +90,9 @@
                         </span>
                         <h3>Rotina diária</h3>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur
-                            adipisicing elit. Qui, magnam soluta impedit
-                            dolorum consequuntur perspiciatis expedita non
-                            dolore corrupti necessitatibus distinctio
-                            voluptatibus quibusdam aut, omnis, quis odio
-                            eos voluptas. Facilis?
+                            Sabemos que temos nossas rotinas diárias
+                            para serem executadas, mas aprimorar com idéias 
+                            que contribuem, são ecessenciais.
                         </p>
 
 
@@ -90,12 +109,8 @@
                         </span>
                         <h3></h3>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur
-                            adipisicing elit. Qui, magnam soluta impedit
-                            dolorum consequuntur perspiciatis expedita non
-                            dolore corrupti necessitatibus distinctio
-                            voluptatibus quibusdam aut, omnis, quis odio
-                            eos voluptas. Facilis?
+                            Trabalhar isolado não deve ser nossas metas.
+                            Vamos nos juntar para alcançar nossas metas!
                         </p>
 
 
@@ -217,38 +232,7 @@
         <!--footer-->
         <div class="container__footer">
             <footer class="footer">
-                <div class="conteudo__footer">
-                    <nav class="nav__footer">
-                        <ul>
-                            <li><a href="social.html" title="Início">
-                                    <span id="sp" class="material-symbols-outlined">
-                                        home
-                                    </span>
-                                </a></li>
-                            <li><a href="#" title="Leitor de Código de Barras">
-                                    <span id="sp" class="material-symbols-outlined">
-                                        barcode
-                                    </span>
-                                </a></li>
-                            <li><a href="#" title="Upload">
-                                    <span id="sp" class="material-symbols-outlined">
-                                        upgrade
-                                    </span>
 
-                                </a></li>
-                            <li><a href="#" title="Arquivos">
-                                    <span id="sp" class="material-symbols-outlined">
-                                        folder
-                                    </span>
-
-                                </a></li>
-
-
-
-                        </ul>
-
-                    </nav>
-                </div>
             </footer>
         </div>
     </div>
