--- a/social.html
+++ b/social.html
@@ -70,13 +70,27 @@
             </nav>
             <!--fim do menu e do ícone hamburguer do site-->
 
-
-            <div id="slider">
-                <img class="selected" src="img/lightbulb-2722916_640.jpg" alt="Image1">
-                <img src="img/imgg2.jpg" alt="Image2">
-                <img src="img/imgg.jpg" alt="Image3">
-                <img src="img/entrepreneur-1340649_640.jpg" alt="Image4">
+            <div id="items-wrapper">
+                <div id="items">
+                    <div class="item">
+                        <img src="img/entrepreneur-1340649_640.jpg" />
+                    </div>
+                    <div class="item">
+                        <img src="img/lightbulb-2722916_640.jpg" />
+                    </div>
+                    <div class="item">
+                        <img src="img/img-1.jpg" />
+                    </div>
+                    <div class="item">
+                        <img src="img/imgg.jpg" />
+                    </div>
+                    <div class="item">
+                        <img src="img/img-3.jpg" />
+                    </div>
+                    
+                </div>
             </div>
+
 
 
         </div>
@@ -91,7 +105,7 @@
                         <h3>Rotina diária</h3>
                         <p>
                             Sabemos que temos nossas rotinas diárias
-                            para serem executadas, mas aprimorar com idéias 
+                            para serem executadas, mas aprimorar com idéias
                             que contribuem, são ecessenciais.
                         </p>
 
