--- a/social.html
+++ b/social.html
@@ -243,27 +243,27 @@
     <div class="card__menores" id="card__menor">
         <div class="card__men">
             <span class="material-symbols-outlined">
-            thumb_up
+                check_circle
             </span>
 
-            <h3>Rotina diária</h3>
+            <h3>Boas Práticas</h3>
         </div>
 
 
         <div class="card__men">
             <span class="material-symbols-outlined">
-            thumb_up
+                rocket_launch
             </span>
 
-            <h3>Rotina diária</h3>
+            <h3>Metas</h3>
         </div>
 
         <div class="card__men">
             <span class="material-symbols-outlined">
-            thumb_up
+                approval_delegation
             </span>
 
-            <h3>Rotina diária</h3>
+            <h3>Crescimentos</h3>
         </div>
     </div>
 
