--- a/social.html
+++ b/social.html
@@ -47,7 +47,7 @@
                 <div id="items">
                     <div class="item">
 
-                        <img src="img/imgg.jpg" />
+                        <img id="img-inicio" src="img/imgg.jpg" />
 
                     </div>
 
